Add favicon among other things

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bussin</title>
     <link rel="stylesheet" href="./client/styles/main.css">
+    <link rel="icon" href="/bus.png"/>
   </head>
   <body>
     <div id="app"></div>
